--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,9 +18,13 @@ body {
   }
   
   .guess {
-    margin-bottom: 50px;
+    margin-bottom: 10px;
     border: 2px solid #666;
     margin-top: 20px;
+  }
+
+  .row{
+      float: left;
   }
   
   h2 {
