--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@ body {
   #hero-totals
   {
     font-size: 28px;
-    color: red;
+    color: #ff0000;
     min-height: 42px;
   }
   
@@ -37,7 +37,7 @@ body {
   {
       font-size: 28px;
       min-height: 42px;
-      color: red;
+      color: #ff0000;
   }
 
 
